プロフィールページを追記

--- a/profile_B.html
+++ b/profile_B.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-	<p> 情報システム</P>
-	<p>西川和希</p>
+	<p>見出し1：プロフィールページ</p>
+	<p>情報システム科</P>
+	<p>日野奏大</p>
 	<p>表計算</p>
 </body>
 </html>
