--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-	<p> 情報システム</P>
-	<p>西川和希</p>
-	<p>表計算</p>
+	<a href="profile_A.html">西川のプロフィール</a>
+	<a href="profile_B.html">日野のプロフィール</a>
+	<p></p>
 </body>
 </html>
 
